<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Conference</string>

    <string name="nav_my_schedule">My schedule</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_speakers">Speakers</string>
    <string name="nav_settings">Settings</string>

    <string name="title_speakers">Speakers</string>
    <string name="title_explore">@string/app_name</string>

    <string name="speaker_description_header">Description</string>
    <string name="speaker_sessions_header">Sessions</string>
    <string name="menu_speaker_twitter">Twitter</string>
    <string name="menu_speaker_github">Github</string>
    <string name="menu_speaker_website">Website</string>

    <string name="in_progress">In progress</string>
    <string name="session_speakers">Speakers</string>
    <string name="speaker_sessions">Sessions</string>
    <string name="menu_share">Share</string>

    <string name="session_finished">Ended</string>
    <string name="session_subtitle"><xliff:g id="time">%1$s</xliff:g> in <xliff:g id="room">%2$s</xliff:g></string>
    <string name="unknown_room">(Unspecified Room)</string>
</resources>
