<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_group_general"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scheduler"
            android:icon="@drawable/ic_drawer_my_schedule"
            android:title="@string/nav_my_schedule"/>

        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_drawer_explore"
            android:title="@string/nav_explore"/>

        <item
            android:id="@+id/nav_speakers"
            android:icon="@drawable/ic_drawer_speakers"
            android:title="@string/nav_speakers"/>

    </group>

    <group
        android:id="@+id/nav_group_other">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/nav_settings"/>

    </group>
</menu>